new table rows finished - now making results page

--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -23,7 +23,8 @@
     text-align:center;
     z-index: 999;
     background: black;
-    opacity: 0.3;
+    opacity: 0.55;
+    border-radius: 20px;
  }
 
 #genText1, #genText2 {
