--- a/client/src/index.css
+++ b/client/src/index.css
@@ -118,6 +118,10 @@ form {
 
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
+  .results-container {
+    
+  }
+  
   .col {  margin: 1% 0 1% 0%; }
   .span_1_of_5, .span_2_of_5, .span_3_of_5, .span_4_of_5, .span_5_of_5 { width: 100%; }
 
