--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,7 +11,7 @@ body {
   display: grid;
   margin: auto;
   padding: 20px;
-  height: 95%;
+  min-height: 95%;
   width: 95%;
   border-width: 3px;
   border-style: solid;
