--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -51,9 +51,9 @@
 }
 
 
-/* @media only screen and (max-width: 480px) {
-    #top-buttons {
-        display: block;
-        height: 75px;
+@media only screen and (max-width: 480px) {
+    #url-button, #logout-button {
+        font-size: 13px;
+        padding: 5px 0px;
     }
-} */
+}
