--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,26 +25,6 @@ body {
   background-color: transparent;
 }
 
-/* .container2{
-  display: grid;
-  margin: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 10px;
-  height: 95%;
-  width: 95%;
-  border-width: 3px;
-  border-style: solid;
-  border-color: #003366;
-  border-radius: 25px;
-  position: relative;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: transparent;
-} */
-
 .row {
     text-align: center;
 }
@@ -147,15 +127,10 @@ button:hover {
 
 /* STYLING FOR LOGO */
 
-#imgStyle {
+#img-style {
   text-align: center;
   width: 65%;
   max-width: 290px; 
-}
-
-#imgStyle2 {
-  text-align: center;
-  width: 90%;
 }
 
 #logoStyle {
