testing mobile display changes

--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -65,7 +65,7 @@
         padding: 5px 0px;
     }
     
-    #info-container {
+    #info-container, #votes-container {
         width: 100%;
         padding-top: 0px;
     }
