--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -4,9 +4,13 @@
 
 #top-buttons {
     display: grid;
-    grid-template-columns: 33% 33% 33%;
-    padding: 0px 20px;
+    grid-template-columns: 25% 25% 25% 25%;
+    position: absolute;
+    padding: 20px 20px;
     text-align: center;
+    width: 100%;
+    z-index: 100;
+    font-size: 10px;
 }
 
 #first-button {
@@ -14,15 +18,9 @@
     grid-column-end: 2;
 }
 
-#second-button {
-    grid-column-start: 2;
-    grid-column-end: 3;
-}
-
-#third-button {
-    grid-column-start: 3;
-    grid-column-end: 4;
-
+#fourth-button {
+    grid-column-start: 4;
+    grid-column-end: 5;
 }
 
 #url-button, #logout-button {
@@ -60,8 +58,10 @@
 }
 
 #votes-container {
+    box-sizing: border-box;
     width: 65%;
     float: right;
+    padding-left: 10px;
 }
 
 #people, .place-votes {
