--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -6,7 +6,7 @@
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
     position: absolute;
-    padding: 20px 20px;
+    padding: 20px 20px 0px 20px;
     text-align: center;
     width: 100%;
     z-index: 100;
@@ -80,7 +80,7 @@
         padding: 5px 0px;
     }
     
-    #info-container {
+    #info-container, #people-container {
         width: 100%;
         padding-top: 0px;
     }
