--- a/client/src/index.css
+++ b/client/src/index.css
@@ -80,6 +80,8 @@ color: #198CFF;
 /*  GO FULL WIDTH BELOW 480 PIXELS */
 @media only screen and (max-width: 480px) {
   .home-container, .results-container, .error-container {
+    margin-top: 10px;
+    margin-bottom: 10px;
     width: 90%;
   }
 }
