--- a/client/src/index.css
+++ b/client/src/index.css
@@ -20,6 +20,8 @@
 
 .row {
   text-align: center;
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 form {
@@ -74,6 +76,15 @@ font-family: 'Alfa Slab One', cursive;
 font-size: 44px;
 margin-bottom: 10px;
 color: #198CFF;
+}
+
+#font-style-3 {
+  font-family: 'Alfa Slab One', cursive;
+  font-size: 22px;
+  text-align: center;
+  color: #198CFF;
+  opacity: 0.95;
+
 }
 
 
