--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -24,7 +24,7 @@
     z-index: 100;
 }
 
-#url-button/*, #logout-button*/ {
+#url-button, #logout-button {
     width: 100%;
     max-width: 180px;
 }
@@ -76,7 +76,7 @@
 
 
 @media only screen and (max-width: 480px) {
-    #url-button/*, #logout-button*/ {
+    #url-button, #logout-button {
         font-size: 13px;
         padding: 5px 0px;
     }
