--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -38,6 +38,10 @@
     min-height: 90px;
 }
 
+#people-container {
+    overflow: auto;
+}
+
 #info-container {
     min-height: 150px;
     border-width: 3px;
@@ -73,6 +77,26 @@
 
 #logout-button:hover {
     box-shadow: inset 0 0 0 5px #FC9700;
+}
+
+#clipboard {
+    padding-left: 5px;
+}
+
+#arrow {
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+
+#times {
+    position: absolute;
+    top: 10px;
+    right: 5px;
+    padding: 10px;
+    cursor: pointer;
 }
 
 
