--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@ html, body, #root, .main-container {
   margin: auto;
   padding: 20px;
   height:100%;
-  /* min-height: 600px; */
+  min-height: 650px;
   width: 95%;
   max-width: 500px;
   border-width: 3px;
