--- a/client/src/pages/FourOhFour/FourOhFour.css
+++ b/client/src/pages/FourOhFour/FourOhFour.css
@@ -1,3 +1,35 @@
-.main-wrapper {
-    color: blue;
+.error-container {
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin: auto;
+    padding: 20px;
+    height:100%;
+    min-height: 650px;
+    width: 95%;
+    max-width: 469px;
+    border-width: 3px;
+    border-style: solid;
+    border-color: #003366;
+    border-radius: 25px;
+    background-color: transparent;
+
+    display: grid;
+    height: 100%;
+    min-height: 650px;
+    overflow: auto;
+    position: relative;
+}
+
+#err-style-1 {
+    font-family: 'Alfa Slab One', cursive;
+    margin-bottom: -30px;
+    font-size: 82px;
+    color: #0060C0;
+}
+
+#err-style-2 {
+    font-family: 'Alfa Slab One', cursive;
+    font-size: 22px;
+    color: #198CFF;
+    padding: 0px 20px;
 }
