--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -26,6 +26,14 @@
     max-width: 180px;
 }
 
+#logout-button {
+    background: #ff0000;
+    margin-bottom: 15px;
+}
+#logout-button:hover {
+    box-shadow: inset 0 0 0 5px #FC9700;
+}
+
 #instructions {
     padding: 5px 15px;
 }
@@ -50,39 +58,25 @@
     border-radius: 10px;
 }
 
-#info-container, #people-container {
+#people-container, #info-container {
+    text-align: center;
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 400px;
     padding-top: 15px;
-    min-height: 90px;
 }
 
 #people-container {
-    text-align: center;
     overflow: auto;
 }
 
 #info-container {
-    text-align: center;
     min-height: 150px;
     border-width: 2px;
     border-style: solid;
     border-color: #003366;
     border-radius: 20px;
-}
-
-#info-container:after {
-    content: none;
-}
-
-#logout-button {
-    background: #ff0000;
-    margin-bottom: 15px;
-}
-#logout-button:hover {
-    box-shadow: inset 0 0 0 5px #FC9700;
 }
 
 #online {
@@ -100,8 +94,6 @@
 #people, .place-votes {
     text-align: left;
 }
-
-
 
 
 @media only screen and (max-width: 520px) {
